More dust stuff

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -22,7 +22,7 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
 
     \hline
 
-    JIT & Just In Time & \ref{sec:visualisation} \\
+    JIT & Just In Time & Section \ref{sec:visualisation} \\
 
   \end{tabular} 
   \label{tbl:Abbreviations}
