--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -32,7 +32,7 @@ I would also like to thank two figures from my formative years for inspiring me.
 The first is my 9\textsuperscript{th} year Physics teacher, Isobel Why, who re-kindled my interest in the field, she was the finest teacher I ever had, turning me from an underachieving student to a keen and committed aspiring physicist.
 She truly had faith in all of her students, and pushed them far beyond what they thought themselves capable of.
 Whilst she left teaching shortly after that year, I will never forget her impact on my life and my work.
-Another is quite indirect, but still important, I would be amiss to thank Winchell ``Nyrath'' Chung, curator of the website \href{http://www.projectrho.com/public_html/rocket/}{Atomic Rockets}.
+Another is quite indirect, but still important, I would be amiss to thank Winchell ``Nyrath'' Chung, curator of the website \footlink{Atomic Rockets}{http://projectrho.com/public\_html/rocket/}.
 Winchell's work is perhaps one of the most complete and exhaustive archive of real life and fictional rocketry and space exploration resources - whilst I haven't called on his work much during my career in astrophysics, I pored over this website when I was younger (perhaps reading it more thoroughly than any of my course textbooks).
 It was fascinating, insightful and inspiring not only to me, but thousands of readers; the number of projects, from hard SFF novellas to honest-to-goodness research proposals hinge on his tireless efforts to catalogue humankind's exploration of space in both reality and fiction.
 I learned of his cancer diagnosis whilst writing this thesis, and it cut me to my core, without his work I don't think I would have turned a fascination with space into a lifelong passion.
