--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -60,8 +60,8 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   \si{\solarmass\per\year} & Solar mass per year & \SI{6.301e+25}{\gram\per\second} \\
   \si{\solarluminosity} & Solar Luminosity & \SI{3.828e+33}{\erg\per\second} \\
   \si{\au} & Astronomical Unit & \SI{1.496e+13}{\centi\metre} \\
-  \si{\pc} & Parsec & \SI{3.086e+18}{\centi\metre} \\
-  ``Warm'' & Warm temperature regime & Between \num{1e4} and \SI{1e5}{\kelvin}, personally \\
+  \si{\parsec} & Parsec & \SI{3.086e+18}{\centi\metre} \\
+  ``Warm'' & Warm temperature regime & \num{1e4}-\SI{1e5}{\kelvin}\footnote{Personally} \\
 
 \end{longtable}
 
