--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -153,6 +153,22 @@
   file = {/Users/py13je/Zotero/storage/NJCRJJ2P/Altwegg et al. - 2019 - Cometary Chemistry and the Origin of Icy Solar Sys.pdf}
 }
 
+@book{apaiProtoplanetaryDustAstrophysical2010,
+  title = {Protoplanetary {{Dust}}: {{Astrophysical}} and {{Cosmochemical Perspectives}}},
+  shorttitle = {Protoplanetary {{Dust}}},
+  editor = {Apai, D\'aniel and Lauretta, Dante S.},
+  date = {2010},
+  series = {Cambridge {{Planetary Science}}},
+  publisher = {{Cambridge University Press}},
+  location = {{Cambridge}},
+  doi = {10.1017/CBO9780511674662},
+  url = {https://www.cambridge.org/core/books/protoplanetary-dust/85F6C4B472B0640535449FD31DFB64FF},
+  urldate = {2022-01-17},
+  abstract = {Planet formation studies uniquely benefit from three disciplines: astronomical observations of extrasolar planet-forming disks, analysis of material from the early Solar System, and laboratory astrophysics experiments. Pre-planetary solids, fine dust, and chondritic components are central elements linking these studies. This book is the first comprehensive overview of planet formation, in which astronomers, cosmochemists, and laboratory astrophysicists jointly discuss the latest insights from the Spitzer and Hubble space telescopes, new interferometers, space missions including Stardust and Deep Impact, and laboratory techniques. Following the evolution of solids from their genesis through protoplanetary disks to rocky planets, the book discusses in detail how the latest results from these disciplines fit into a coherent picture. This volume provides a clear introduction and valuable reference for students and researchers in astronomy, cosmochemistry, laboratory astrophysics, and planetary sciences.},
+  isbn = {978-0-521-51772-0},
+  file = {/Users/py13je/Zotero/storage/HNTAMTFY/85F6C4B472B0640535449FD31DFB64FF.html}
+}
+
 @article{arora_x-ray_2018,
   title = {X-Ray Observations of the Colliding Wind Binary {{WR}} 25},
   author = {Arora, Bharti and Pandey, Jeewan Chandra},
@@ -343,6 +359,24 @@
   urldate = {2020-01-08},
   abstract = {It is shown that the most important source of energy in ordinary stars is the reactions of carbon and nitrogen with protons. These reactions form a cycle in which the original nucleus is reproduced, viz. C12+H=N13, N13=C13+{$\epsilon$}+, C13+H=N14, N14+H=O15, O15=N15+{$\epsilon$}+, N15+H=C12 +He4. Thus carbon and nitrogen merely serve as catalysts for the combination of four protons (and two electrons) into an {$\alpha$}-particle (\textsection 7).},
   file = {/Users/py13je/Zotero/storage/W2LRNDRK/Bethe - 1939 - Energy Production in Stars.pdf;/Users/py13je/Zotero/storage/IESSBEDW/PhysRev.55.html}
+}
+
+@article{birnstielDustEvolutionFormation2016,
+  title = {Dust {{Evolution}} and the {{Formation}} of {{Planetesimals}}},
+  author = {Birnstiel, T. and Fang, M. and Johansen, A.},
+  date = {2016-12-01},
+  journaltitle = {Space Science Reviews},
+  shortjournal = {Space Sci Rev},
+  volume = {205},
+  number = {1},
+  pages = {41--75},
+  issn = {1572-9672},
+  doi = {10.1007/s11214-016-0256-1},
+  url = {https://doi.org/10.1007/s11214-016-0256-1},
+  urldate = {2022-01-17},
+  abstract = {The solid content of circumstellar disks is inherited from the interstellar medium: dust particles of at most a micrometer in size. Protoplanetary disks are the environment where these dust grains need to grow at least 13 orders of magnitude in size. Our understanding of this growth process is far from complete, with different physics seemingly posing obstacles to this growth at various stages. Yet, the ubiquity of planets in our galaxy suggests that planet formation is a robust mechanism. This chapter focuses on the earliest stages of planet formation, the growth of small dust grains towards the gravitationally bound ``planetesimals'', the building blocks of planets. We will introduce some of the key physics involved in the growth processes and discuss how they are expected to shape the global behavior of the solid content of disks. We will consider possible pathways towards the formation of larger bodies and conclude by reviewing some of the recent observational advances in the field.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/YNBVLYFM/Birnstiel et al. - 2016 - Dust Evolution and the Formation of Planetesimals.pdf}
 }
 
 @book{blandyProgrammingRustFast2021,
@@ -1132,6 +1166,17 @@
   urldate = {2021-07-26},
   abstract = {Written by one of today's most highly respected astrophysicists, Foundations of High-Energy Astrophysics is an introduction to the mathematical and physical techniques used in the study of high-energy astrophysics. Here, Mario Vietri approaches the basics of high-energy astrophysics with an emphasis on underlying physical processes as opposed to a more~mathematical approach. Alongside more traditional topics, Vietri presents new subjects increasingly considered crucial to understanding high-energy astrophysical sources, including the electrodynamics of cosmic sources, new developments in the theory of standard accretion disks,~and the physics of coronae, thick disks, and accretion onto magnetized objects. The most thorough and engaging survey of high-energy astrophysics available today, Foundations of High-Energy Astrophysics introduces the main physical processes relevant to the field in a rigorous yet accessible way, while paying careful attention to observational issues. Vietri's book will quickly become a classic text for students and active researchers in astronomy and astrophysics. Those in adjoining fields will also~find it a valuable addition to their personal libraries.},
   file = {/Users/py13je/Zotero/storage/CBFS4GBC/Foundations of High-Energy Astrophysics.pdf;/Users/py13je/Zotero/storage/6KU5BB3B/bo5502346.html}
+}
+
+@book{freedmanUniverse2011,
+  title = {Universe},
+  author = {Freedman, Roger A and Geller, Robert M and Kaufmann, William J},
+  date = {2011},
+  publisher = {{W.H. Freeman and Company}},
+  location = {{New York}},
+  isbn = {978-1-4292-3153-4},
+  langid = {english},
+  annotation = {OCLC: 875768602}
 }
 
 @article{friend_theory_1986,
@@ -4222,7 +4267,8 @@
   urldate = {2022-01-16},
   abstract = {It has been firmly established over the last quarter century that cosmic dust plays important roles in astrochemistry. The consequences of these roles affect the formation of planets, stars and even galaxies. Cosmic dust has been a controversial topic but there is now a considerable measure of agreement as to its nature and roles in astronomy, and its initiation of astrobiology. The subject has stimulated an enormous research effort, with researchers in many countries now involved in laboratory research and in \emph{ab initio} computations. This is the first book devoted to a study of the chemistry of cosmic dust, presenting current thinking on the subject distilled from many publications in surface and solid-state science, and in astronomy. The authors discuss the nature of dust, its formation and evolution, the chemistry it can promote on its surfaces, and the consequences of these functions. The purpose of this book is to review current understanding and to indicate where future work is required. Mainly intended for researchers in the field of astrochemistry, the book could also be used as the basis of a course for postgraduate students who have an interest in astrochemistry.},
   isbn = {978-1-78262-047-1},
-  langid = {english}
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/2M27QWXE/9781782623694-00130.pdf;/Users/py13je/Zotero/storage/43TN8A87/9781782623694-00288.pdf;/Users/py13je/Zotero/storage/4VVEWADK/9781782623694-00239.pdf;/Users/py13je/Zotero/storage/99F5YXPQ/9781782623694-00157.pdf;/Users/py13je/Zotero/storage/C9ZZE6YP/9781782623694-00001.pdf;/Users/py13je/Zotero/storage/DHK4JKSM/9781782623694-00036.pdf;/Users/py13je/Zotero/storage/EL5TA9Q9/9781782623694-00296.pdf;/Users/py13je/Zotero/storage/EMZ9S3WP/9781782623694-00089.pdf;/Users/py13je/Zotero/storage/JVGP3Y2K/9781782623694-00197.pdf;/Users/py13je/Zotero/storage/JWCQGFFW/9781782623694-00049.pdf;/Users/py13je/Zotero/storage/KFAMRQIS/9781782623694-00268.pdf;/Users/py13je/Zotero/storage/KFQDYCBC/9781782623694-00021.pdf;/Users/py13je/Zotero/storage/NCAELBZZ/9781782623694-00117.pdf;/Users/py13je/Zotero/storage/Z3MK9Q64/9781782623694-00258.pdf;/Users/py13je/Zotero/storage/2M5AZZ2B/978-1-78262-047-1.html}
 }
 
 @article{williamsCollidingwindWC9OB2015,
