A few more pages down

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -9,15 +9,6 @@
   keywords = {software}
 }
 
-@book{10.5555/1593511,
-  title = {Python 3 Reference Manual},
-  author = {Van Rossum, Guido and Drake, Fred L.},
-  date = {2009},
-  publisher = {{CreateSpace}},
-  location = {{Scotts Valley, CA}},
-  isbn = {1-4414-1269-7}
-}
-
 @article{1982ApJ...259..282A,
   title = {The Theory of Radiatively Driven Stellar Winds. {{II}}. {{The}} Line Acceleration.},
   author = {Abbott, D. C.},
@@ -607,6 +598,19 @@
   file = {/Users/py13je/Zotero/storage/CPUA4ISQ/Cherchneff et al. - 1992 - Polycyclic Aromatic Hydrocarbon Formation in Carbo.pdf;/Users/py13je/Zotero/storage/WYWQT2B6/ui.adsabs.harvard.edu.html}
 }
 
+@book{cherchneffDustFormationCarbonrich2015,
+  title = {Dust Formation in Carbon-Rich {{Wolf-Rayet}} Colliding Winds},
+  author = {Cherchneff, I.},
+  date = {2015-01-01},
+  pages = {269--274},
+  url = {https://ui.adsabs.harvard.edu/abs/2015wrs..conf..269C},
+  urldate = {2022-01-20},
+  abstract = {Carbon-rich Wolf-Rayet stars are efficient carbon dust makers. Despite the strong evidence for dust formation in these objects provided by infrared thermal emission from dust, the routes to nucleation and condensation and the physical conditions required for dust production are still poorly understood. We discuss here the potential routes to carbon dust and the possible locations conducive to dust formation in the colliding winds of WC binaries.},
+  eventtitle = {Wolf-{{Rayet Stars}}},
+  annotation = {ADS Bibcode: 2015wrs..conf..269C},
+  file = {/Users/py13je/Zotero/storage/YQR5WJCG/Cherchneff - 2015 - Dust formation in carbon-rich Wolf-Rayet colliding.pdf}
+}
+
 @article{cherepashchukDetectabilityWolfRayetBinaries1976,
   title = {Detectability of {{Wolf-Rayet}} Binaries from {{X-rays}}.},
   author = {Cherepashchuk, A. M.},
@@ -654,6 +658,23 @@
   abstract = {We have studied the 5\textendash 8.5 mm infrared spectra of the late-type Wolf-Rayet stars WR 118, WR 112, and WR 104, the WN star WR 147, the B5 hypergiant Cygnus OB2 No. 12, and the Galactic center luminous blue variable Pistol Star using the Short Wavelength Spectrometer on the Infrared Space Observatory. We attribute an absorption feature at 6.2 mm in the spectra of WC stars to amorphous carbon dust. This absorption feature is not detected in the diffuse interstellar medium toward the WR 147, Cyg OB2 No. 12, or the Pistol Star, and therefore we suggest that it is circumstellar in nature. In addition, we detect a broad absorption feature extending from approximately 6.5 to 8 mm. We tentatively attribute this absorption to the C i C stretching modes that accompany the 6.2 mm band in aromatic materials. Our analysis of the 6.2 mm absorption profile suggests that the dust grains have to be rather large ({$\sim$}1 mm) and point toward dense clumps as the sites of dust formation.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/WGVXH2FJ/Chiar and Tielens - 2001 - Circumstellar Carbonaceous Material Associated wit.pdf}
+}
+
+@article{chokshiDustCoagulation1993,
+  title = {Dust {{Coagulation}}},
+  author = {Chokshi, Arati and Tielens, A. G. G. M. and Hollenbach, D.},
+  date = {1993-04-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {407},
+  pages = {806},
+  issn = {0004-637X},
+  doi = {10.1086/172562},
+  url = {https://ui.adsabs.harvard.edu/abs/1993ApJ...407..806C},
+  urldate = {2022-01-26},
+  abstract = {The microphysics of coagulation between two, colliding, smooth, spherical grains in the elastic limit is investigated, and the criteria for sticking as a function of particle sizes, collision velocities, elastic properties, and binding energy are calculated. Critical relative velocities for coagulation were evaluated as a function of grain sizes for solicate, icy, and carbonaceous grains. It is concluded that efficient coagulation requires coverage of grain cores by an icy grain mantle. In this case, coagulation leads to only a doubling of the mass of a large grain within a dense core lifetime. It is concluded that coagulation can have a dramatic effect on the visible and, particularly, the UV portion of the extinction curve in dense clouds and on their IR spectrum.},
+  keywords = {Astrophysics,Coagulation,EXTINCTION,GALAXY: FORMATION,Grain Size,Interplanetary Dust,Interplanetary Medium,ISM: DUST,ISM: GENERAL,Molecular Clouds,Planetary Evolution,Silicones,Solar System,Stellar Envelopes,Surface Roughness},
+  annotation = {ADS Bibcode: 1993ApJ...407..806C},
+  file = {/Users/py13je/Zotero/storage/64KLPKEL/Chokshi et al. - 1993 - Dust Coagulation.pdf}
 }
 
 @article{colella_piecewise_1984,
@@ -1764,6 +1785,55 @@
   file = {/Users/py13je/Zotero/storage/EKFBP5G9/Ishihara et al. - 2011 - Galactic distributions of carbon- and oxygen-rich .pdf}
 }
 
+@article{jonesDustDestructionProcesses2004,
+  title = {Dust {{Destruction Processes}}},
+  author = {Jones, A. P.},
+  date = {2004-05-01},
+  volume = {309},
+  pages = {347},
+  url = {https://ui.adsabs.harvard.edu/abs/2004ASPC..309..347J},
+  urldate = {2022-01-26},
+  abstract = {Dust destruction occurs in a variety of interstellar environments, including regions of intense stellar radiation fields (H II regions, {$\gamma$}-ray bursts, ...), in the hot gas behind supernova remnants and in interstellar shock waves. Overall the interstellar dust survival time in the galactic interstellar medium is dominated by the effects of dust destruction and disruption in supernova-generated shock waves in the warm intercloud medium. This review summarizes these destructive processes and indicates the typical destruction timescales.},
+  eventtitle = {Astrophysics of {{Dust}}},
+  annotation = {ADS Bibcode: 2004ASPC..309..347J},
+  file = {/Users/py13je/Zotero/storage/DLA6MAQH/Jones - 2004 - Dust Destruction Processes.pdf}
+}
+
+@article{jonesGrainDestructionShocks1994,
+  title = {Grain {{Destruction}} in {{Shocks}} in the {{Interstellar Medium}}},
+  author = {Jones, A. P. and Tielens, A. G. G. M. and Hollenbach, D. J. and McKee, C. F.},
+  date = {1994-10-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {433},
+  pages = {797},
+  issn = {0004-637X},
+  doi = {10.1086/174689},
+  url = {https://ui.adsabs.harvard.edu/abs/1994ApJ...433..797J},
+  urldate = {2022-01-26},
+  abstract = {Destruction of interstellar dust occurs predominantly in supernova shock waves in the warm neutral/ionized medium (density approximately = 0.25/cu cm, temperature approximately = 104 K). Recent theoretical developments and laboratory data for sputtering processes and grain-grain collisional vaporization allows us to better evaluate the grain destruction rate in interstellar shocks in the warm medium. We find that, independent of composition, grain destruction in supernova blast waves is dominated by nonthermal sputtering for shock velocities greater than 50 km/s and less than or equal to 150 km/s and thermal sputtering at higher shock velocities. We use a detailed scheme for the vaporization of grains colliding at high velocities (vs greater than or equal to 20 km/s) and show that the grain-grain collision destruction process is only dominant for shock velocities of less than or equal to 50-80 km/s and is less important than previously assumed. Nevertheless, the grain-grain destruction rates are of order 30\%-90\% of the sputtering rates at vs greater than 100 km/s and less than 200 km/s and are important in vaporizing the cores of grains. Detailed results for grain destruction as a function of grain size and composition are presented. We also present results for silicon carbide, iron, ice, and porous test particles. For carbonaceous grains we find that the fractional destruction is less than or equal to 0.29, and for silicate it is less than or equal to 0.45, for vs less than or equal to 200 km/s. We have calculated grain lifetimes, using the three-phase model of the interstellar medium, and find lifetimes of 4 x 108 yr for carbonaceous grains and 2.2 x 108 yr for silicate grains. Given that the typical stardust injection timescale of 2.5 x 109 yr, we conclude that efficient mechanisms for grain growth in the interstellar medium must exist in order that a significant fraction of the refractory elements be incorporated in dust, as observed. Therefore, although our improved model has less vaporization of dust due to grain-grain collisions, sputtering still destroys dust efficiently and grain mantle growth in the interstellar medium is required, a conclusion reached in previous models of grain destruction in the interstellar medium. Carbonaceous mantles on silicate grains can protect the silicate cores from sputtering destruction in interstellar shock waves, provided that the protective mantles can efficiently reform in the interstellar medium. Also, if the grains are porous the postshock grain velocities are lower than for solid particles, and grain destruction is reduced. Porosity and mantling may increase the grain lifetime by factors of approximately 3 and approximately 3-4, respectively. The fraction of interstellar silicon in silicate stardust is therefore less than or equal to 0.25, but more silicon might be depleted in the form of a grain mantle.},
+  keywords = {Astronomical Models,Astrophysics,Carbonaceous Materials,Cosmic Dust,EXTINCTION,Ice,Iron,ISM: DUST,Numerical Analysis,Particle Collisions,Porous Materials,Shock Waves,SHOCK WAVES,Silicates,Silicon Carbides,Sputtering,STARS: SUPERNOVAE: GENERAL,Supernovae,Vaporizing},
+  annotation = {ADS Bibcode: 1994ApJ...433..797J},
+  file = {/Users/py13je/Zotero/storage/2G4B25XB/Jones et al. - 1994 - Grain Destruction in Shocks in the Interstellar Me.pdf}
+}
+
+@article{jonesGrainShatteringShocks1996,
+  title = {Grain {{Shattering}} in {{Shocks}}: {{The Interstellar Grain Size Distribution}}},
+  shorttitle = {Grain {{Shattering}} in {{Shocks}}},
+  author = {Jones, A. P. and Tielens, A. G. G. M. and Hollenbach, D. J.},
+  date = {1996-10-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {469},
+  pages = {740},
+  issn = {0004-637X},
+  doi = {10.1086/177823},
+  url = {https://ui.adsabs.harvard.edu/abs/1996ApJ...469..740J},
+  urldate = {2022-01-26},
+  abstract = {We have studied the effects of shattering in grain-grain collisions. Based upon extensive numerical simulation of surface explosions and impacts, an analytical model has been developed which relates the final crater mass and fragment size distribution to the relative collision velocity, grain sizes, and material properties of projectile and target. Our model contains one free parameter, the critical shock pressure for shattering. We have compared the calculated crater masses to laboratory experiments on (sub)micron-sized particle impacts on a wide variety of materials and find good agreement assuming that the critical pressure for shattering is equal to the shear strength of the material. This critical pressure corresponds to minimum collision velocities of {$\sim$}1 km s-1 for shattering to occur. The shattering threshold is much smaller than the vaporization threshold, and we therefore conclude that shattering dominates over vaporization in grain-grain collisions. The calculated size distribution of the shattered fragments scales with a a-3.3; slightly less steep than the Mathis, Rumpl, \& Nordsieck (MRN) size distribution. Essentially, any shattering model where the size of the fragments is related to the pressure experienced will lead to fragment power-law size distributions with indices slightly steeper than {$\sim$}3. The maximum fragment size increases with increasing crater size (i.e., increasing collision velocity) until the target grain is completely disrupted by the collision. For higher velocity collisions, our theory predicts that the maximum shattered fragment size will decrease again. Dust destruction (return of grain mass to the gas) in the interstellar medium occurs predominantly in shock waves in the warm neutral/ionized medium (density {$\simeq$}0.25 cm-3, temperature {$\sim$}104 K). The new theory for grain shattering in grain-grain collisions has been incorporated into a grain destruction code and used to reevaluate the grain destruction rate in interstellar shocks in the warm medium. We find that, for all the grain materials we consider (graphite, silicate, silicon carbide, diamond, iron, and ice) nonthermal and thermal sputtering dominate the grain destruction. We also find that grain disruption (shattering) in grain-grain collisions dominates the grain mass redistribution. We present detailed results for grain destruction as a function of the grain size and composition. In particular, we consider MRN size distributions of silicate and carbonaceous (amorphous carbon/ graphite) grains. We also present results for silicon carbide, diamond, iron, and ice test particles. For both carbonaceous and silicate grains we find that the fractional destruction (i.e., return of solid material to the gas phase) is {$\leq$}0.5, for vs {$\leq$}200 km s-1 . The grain lifetimes against destruction, assuming the three-phase model of the interstellar medium, are 6 x 108 yr, and 4 x 108 yr, for carbonaceous and silicate grains, respectively, only slightly longer than previous studies that ignored shattering. Grain shattering in grain-grain collisions in shock waves leads to the redistribution of the dust mass from large grains (a {$\geq$} 1000 \AA ) into small grains (a {$<$} 500 \AA ). After processing by a single shock, a major fraction of the grains larger than 300 A have experienced shattering grain-grain collisions. The slope of the fragment size distribution produced in single collisions has little influence on the size distribution produced by shocks. Essentially, the resulting grain size distribution is slightly steeper than MRN, because the largest grains move at the highest postshock velocities and hence are preferentially shattered into the smallest fragments. Large grains are lost from the interstellar grain size distribution on time scales less than 108 yr in the warm medium. For 50 km s-1 {$\leq$} vs {$\leq$} 200 km s-1 as much as 5\%-15\% of the initial grain mass (all grain radii {$\geq$} 50 \AA ) may end up in sub-14 \AA{} fragments. Thus, interstellar shocks may be a prodigious source of PAH molecules, PAH clusters, and small grains. Given that the typical stardust injection time scale is 2.5 x 109 yr, we conclude that efficient mechanisms for grain growth, and in particular, the reformation of grains with radii{$>$} 1000 \AA, must exist in interstellar medium in order that the refractory elements be incorporated in dust and that most of the dust mass is in sizes {$\geq$} 1000 \AA, as observed.},
+  keywords = {EXTINCTION,ISM: DUST,METHODS: NUMERICAL,SHOCK WAVES,STARS: SUPERNOVAE: GENERAL},
+  annotation = {ADS Bibcode: 1996ApJ...469..740J},
+  file = {/Users/py13je/Zotero/storage/NYQDHEI9/Jones et al. - 1996 - Grain Shattering in Shocks The Interstellar Grain.pdf}
+}
+
 @inproceedings{kaastra_coronal_2000,
   title = {Coronal {{Plasmas Modeling}} and the {{MEKAL}} Code},
   author = {Kaastra, Jelle S. and Mewe, Rolf},
@@ -1909,14 +1979,6 @@
   date = {2015},
   pages = {1--6},
   keywords = {software}
-}
-
-@inproceedings{lam2015numba,
-  title = {Numba: {{A}} Llvm-Based Python Jit Compiler},
-  booktitle = {Proceedings of the Second Workshop on the {{LLVM}} Compiler Infrastructure in {{HPC}}},
-  author = {Lam, Siu Kwan and Pitrou, Antoine and Seibert, Stanley},
-  date = {2015},
-  pages = {1--6}
 }
 
 @inproceedings{lamberts_colliding_2012,
@@ -2400,6 +2462,24 @@
   urldate = {2019-11-04},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/GH5834CL/Monnier et al. - 2007 - The Keck Aperture-masking Experiment Near-Infrare.pdf;/Users/py13je/Zotero/storage/YJN4TIQL/509873.html}
+}
+
+@article{monnierPinwheelNebulaWR1999,
+  title = {Pinwheel {{Nebula}} around {{WR}} 98a},
+  author = {Monnier, J. D. and Tuthill, P. G. and Danchi, W. C.},
+  date = {1999-10-08},
+  journaltitle = {The Astrophysical Journal},
+  shortjournal = {ApJ},
+  volume = {525},
+  number = {2},
+  pages = {L97},
+  publisher = {{IOP Publishing}},
+  issn = {0004-637X},
+  doi = {10.1086/312352},
+  url = {https://iopscience.iop.org/article/10.1086/312352/meta},
+  urldate = {2022-01-20},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/TVGTDXUH/Monnier et al. - 1999 - Pinwheel Nebula around WR 98a.pdf;/Users/py13je/Zotero/storage/UW3TYBS6/312352.html}
 }
 
 @article{morrisseySputteringSurfacesIon2020,
@@ -3674,6 +3754,23 @@
   file = {/Users/py13je/Zotero/storage/YEV4TCII/Sugawara et al. - 2017 - X-ray spectral variability of the colliding wind b.pdf;/Users/py13je/Zotero/storage/TXBFGQMB/ui.adsabs.harvard.edu.html}
 }
 
+@article{sumpterEvolvingGrainsizeDistributions2020,
+  title = {Evolving Grain-Size Distributions Embedded in Gas Flows},
+  author = {Sumpter, R and Van~Loo, S},
+  date = {2020-05-11},
+  journaltitle = {Monthly Notices of the Royal Astronomical Society},
+  shortjournal = {Monthly Notices of the Royal Astronomical Society},
+  volume = {494},
+  number = {2},
+  pages = {2147--2157},
+  issn = {0035-8711},
+  doi = {10.1093/mnras/staa846},
+  url = {https://doi.org/10.1093/mnras/staa846},
+  urldate = {2022-01-21},
+  abstract = {We present a numerical approach for accurately evolving a dust grain-size distribution undergoing number-conserving (such as sputtering) and/or mass-conserving (such as shattering) processes. As typically observed interstellar dust distributions follow a power law, our method adopts a power-law discretization and uses both the grain mass and number densities in each bin to determine the power-law parameters. This power-law method is complementary to piecewise-constant and linear methods in the literature. We find that the power-law method surpasses the other two approaches, especially for small bin numbers. In the sputtering tests, the relative error in the total grain mass remains below 0.01~per\,cent independent of the number of bins N, while the other methods only achieve this for N \&gt; 50 or higher. Likewise, the shattering test shows that the method also produces small relative errors in the total grain numbers while conserving mass. Not only does the power-law method conserve the global distribution properties, it also preserves the inter-bin characteristics so that the shape of the distribution is recovered to a high degree. This does not always happen for the constant and linear methods, especially not for small bin numbers. Implementing the power-law method in a hydrodynamical code thus minimizes the numerical cost while maintaining high accuracy. The method is not limited to dust grain distributions, but can also be applied to the evolution of any distribution function, such as a cosmic ray distribution affected by synchrotron radiation or inverse-Compton scattering.},
+  file = {/Users/py13je/Zotero/storage/5JMI7ZSM/Sumpter and Van Loo - 2020 - Evolving grain-size distributions embedded in gas .pdf}
+}
+
 @article{taam_common_2000,
   title = {Common {{Envelope Evolution}} of {{Massive Binary Stars}}},
   author = {Taam, Ronald E. and Sandquist, Eric L.},
@@ -3964,6 +4061,15 @@
   abstract = {I estimate the rate of mass loss in the form of cold dense gas from a wide Wolf-Rayet binary like WR140. At some distance from the binary, this gas can form a dust shell and reradiate the UV radiation in the IR region. In the case of WR 140 which has a high eccentricity the observed IR outbursts may be caused by the strong increase of the cold dense gas outflow from WR 140 at the periastron.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/GCJLRUCG/Usov - 1991 - Stellar wind collision and dust formation in long-.pdf}
+}
+
+@article{van1999wolf,
+  title = {Wolf-Rayet Phenomena in Massive Stars and Starburst Galaxies},
+  author = {van der Hucht, Karel A and Koenigsberger, Gloria and Eenens, Philippe RJ},
+  options = {useprefix=true},
+  date = {1999},
+  journaltitle = {Wolf-Rayet Phenomena in Massive Stars and Starburst Galaxies},
+  volume = {193}
 }
 
 @article{vanderhuchtVIIthCatalogueGalactic2001,
